attempts to fix bleeding issue in contact

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -295,10 +295,19 @@ img.bob_img {
 }
 
 #contact_nav {
-    margin: auto;
     display: block;
-    width: 53%;
+    margin: auto;
+    width: 50%;
 }
+
+.contact-form {
+    display: block;
+    margin: auto;
+    
+    
+}
+
+
 
 table {
     margin: auto;
